[build-system]
requires = [
    "setuptools >= 40.0.4",
    "wheel >= 0.29.0",
    "setuptools_scm[toml]>=3.4",
]
build-backend = 'setuptools.build_meta'

[project]
name = "reflex-debounce-input"
description = "Reflex full-stack framework wrapper around react-debounce-input"
authors = [
    {name = "Masen Furer", email = "m_github@0x26.net"},
]
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 4 - Beta',
    # 'Framework :: Reflex',
    # 'Framework :: Reflex :: 0.1',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    # 'Programming Language :: Javascript',
    'Programming Language :: Python',
]
dynamic = ["version", "readme"]
dependencies = [
    'reflex ~= 0.2.0',
]

[project.urls]
Homepage = "https://github.com/trivial-intelligence/reflex-debounce-input"

[tool.setuptools]
platforms = ['unix', 'linux', 'osx', 'cygwin', 'win32']

[tool.setuptools.dynamic.readme]
file = ["README.md"]
content-type = "text/markdown"

[tool.setuptools_scm]
